--- a/style.css
+++ b/style.css
@@ -426,3 +426,57 @@ ul li a{
 .fotter4{
     width: 25%;
 }
+
+
+
+
+@media only screen and (max-width: 1024px) {
+    .articles{
+        width: 100%;
+        height: 85vh;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .articles .top{
+        width: 70%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .articles .bottom{
+        width: 70%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .container-2{
+        width: 100%;
+        height: 65vh;
+        padding-top: 90px;
+        padding-bottom: 90px;
+        display: flex;
+        align-items: center;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .contain-2 h1{
+        width: 50%;
+        font-size: 30px;
+        color: #fff;
+    }
+    .contain-2 button{
+        width: 40%;
+        font-size: 17px;
+        display: flex;
+    }
+    .testimonial{
+        width: 95%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        column-gap: 30px;
+    }
+}
