--- a/style.css
+++ b/style.css
@@ -468,15 +468,70 @@ ul li a{
     }
     .contain-2 button{
         width: 40%;
-        font-size: 17px;
+        font-size: 16px;
         display: flex;
     }
     .testimonial{
-        width: 95%;
-        height: 45vh;
+        width: 90%;
+        height: 40vh;
         margin: auto;
         display: flex;
         align-items: center;
         column-gap: 30px;
+    }
+    .subcribe-section{
+        width: 100%;
+        height: 30vh;
+        padding-bottom: 10px;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .subcribe{
+        width: 60%;
+        height: 27vh;
+        margin: auto;
+        background-color: hsl(217, 28%, 15%);
+        position: relative;
+        left: -1rem;
+        top: 8rem;
+        z-index: 3;
+    }
+    .subcribe h1{
+        font-size: 29px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-top: 22px;
+    }
+    .subcribe p{
+        width: 75%;
+        margin: auto;
+        font-size: 16px;
+        text-align: center;
+        color: rgb(230, 230, 230);
+        padding-top: 10px;
+    }
+    .subcribe span{
+        width: 70%;
+        margin: auto;
+        padding-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .subcribe span input{
+        width: 60%;
+        height: 40px;
+        padding-left: 15px;
+        border: 0;
+        border-radius: 20px;
+    }
+    .subcribe span button{
+        width: 35%;
+        height: 40px;
+        padding-left: 5px;
+        border: 0;
+        font-size: 13px;
+        border-radius: 20px;
+        color: #fff;
+        background-color: hsl(177, 55%, 51%);
     }
 }
