--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ ul li a{
 }
 .underNav img{
     width: 45%;
-    /* height: 60vh; */
     margin-top: 20px;
 }
 .underNav .carry h1{
@@ -246,6 +245,7 @@ ul li a{
     height: 30px;
     margin-top: 20px;
     border: 0;
+    display: flex;
     font-size: 15px;
     border-bottom: 2px solid hsl(177, 60%, 50%);
     color: hsl(177, 60%, 50%);
@@ -335,7 +335,7 @@ ul li a{
     background-color: hsl(217, 28%, 15%);
     position: relative;
     left: -1rem;
-    top: 8rem;
+    top: 7rem;
     z-index: 3;
 }
 .subcribe h1{
@@ -345,7 +345,7 @@ ul li a{
     padding-top: 22px;
 }
 .subcribe p{
-    width: 50%;
+    width: 70%;
     margin: auto;
     font-size: 16px;
     text-align: center;
@@ -431,9 +431,29 @@ ul li a{
 
 
 @media only screen and (max-width: 1024px) {
+    
+    .underNav img{
+        width: 55%;
+        margin-top: 40px;
+    }
+    .underNav .carry h1{
+        width: 40vw;
+        font-size: 30px;
+        text-align: center;
+        margin-top: 10px;
+        color: #fff;
+    }
+    .underNav .carry p{
+        width: 70%;
+        font-size: 18px;
+        text-align: center;
+        margin-top: 25px;
+        color: hsl(0, 5%, 80%);
+    }
     .articles{
         width: 100%;
         height: 85vh;
+        padding-top: 20px;
         background-color: hsl(218, 28%, 13%);
     }
     .articles .top{
@@ -444,6 +464,20 @@ ul li a{
         justify-content: space-between;
         align-items: center;
     }
+    .articles .top .left h1{
+        width: 100%;
+        font-size: 30px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
+    }
+    .articles .top .right h1{
+        width: 80%;
+        font-size: 30px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
+    }
     .articles .bottom{
         width: 70%;
         height: 45vh;
@@ -451,6 +485,20 @@ ul li a{
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    .articles .bottom .left h1{
+        width: 100%;
+        font-size: 30px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
+    }
+    .articles .bottom .right h1{
+        width: 100%;
+        font-size: 30px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
     }
     .container-2{
         width: 100%;
@@ -472,12 +520,71 @@ ul li a{
         display: flex;
     }
     .testimonial{
-        width: 90%;
-        height: 40vh;
+        width: 95%;
+        height: 45vh;
         margin: auto;
         display: flex;
         align-items: center;
         column-gap: 30px;
+    }
+    .quotes-img{
+        position: absolute;
+        left: 4rem;
+        top: -1.5rem;
+        z-index: 1;
+    }
+    .inside{
+        padding: 20px;
+    }
+    .box1{
+        width: 35%;
+        height: 30vh;
+        border-radius: 10px;
+        z-index: 6;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box1 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .box2{
+        width: 35%;
+        height: 30vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box2 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .box3{
+        width: 35%;
+        height: 30vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box3 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .profile{
+        width: 95%;
+        height: 10vh;
+        padding-top: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .profile img{
+        width: 20%;
+        height: 35px;
+        padding-right: 10px;
+        border-radius: 45%;
+    }
+    .profile h3{
+        font-size: 16px;
+    }
+    .profile p{
+        font-size: 15px;
     }
     .subcribe-section{
         width: 100%;
@@ -492,17 +599,17 @@ ul li a{
         background-color: hsl(217, 28%, 15%);
         position: relative;
         left: -1rem;
-        top: 8rem;
+        top: 4rem;
         z-index: 3;
     }
     .subcribe h1{
         font-size: 29px;
         text-align: center;
         color: rgb(255, 255, 255);
-        padding-top: 22px;
+        padding-top: 12px;
     }
     .subcribe p{
-        width: 75%;
+        width: 70%;
         margin: auto;
         font-size: 16px;
         text-align: center;
@@ -510,7 +617,7 @@ ul li a{
         padding-top: 10px;
     }
     .subcribe span{
-        width: 70%;
+        width: 80%;
         margin: auto;
         padding-top: 20px;
         display: flex;
@@ -519,19 +626,261 @@ ul li a{
     }
     .subcribe span input{
         width: 60%;
-        height: 40px;
+        height: 30px;
         padding-left: 15px;
         border: 0;
         border-radius: 20px;
     }
     .subcribe span button{
         width: 35%;
-        height: 40px;
+        height: 30px;
         padding-left: 5px;
         border: 0;
         font-size: 13px;
         border-radius: 20px;
         color: #fff;
         background-color: hsl(177, 55%, 51%);
+    }
+}
+@media only screen and (max-width: 768px) {
+    
+    .underNav img{
+        width: 55%;
+        margin-top: 20px;
+    }
+    .underNav .carry h1{
+        width: 50vw;
+        font-size: 30px;
+        text-align: center;
+        margin-top: 10px;
+        color: #fff;
+    }
+    .underNav .carry p{
+        width: 90%;
+        font-size: 18px;
+        text-align: center;
+        margin-top: 25px;
+        color: hsl(0, 5%, 80%);
+    }
+    .underNav .carry button{
+        width: 35%;
+        height: 40px;
+        margin-top: 20px;
+        border: 0;
+        border-radius: 20px;
+        color: #fff;
+        background-color: hsl(198, 60%, 50%);
+    }
+    .articles{
+        width: 100%;
+        height: 90vh;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .articles .top{
+        width: 100%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .articles .top .left h1{
+        width: 80%;
+        font-size: 25px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
+    }.articles .top .right h1{
+        width: 80%;
+        font-size: 25px;
+        margin-top: 15px;
+        text-align: center;
+        color: #fff;
+    }
+    .articles .bottom{
+        width: 100%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .articles .bottom .left h1{
+        width: 80%;
+        font-size: 25px;
+        margin-top: 25px;
+        text-align: center;
+        color: #fff;
+    }.articles .bottom .right h1{
+        width: 80%;
+        font-size: 25px;
+        margin-top: 25px;
+        text-align: center;
+        color: #fff;
+    }
+    .contain-1 img{
+        width: 50%;
+        height: 50vh;
+    }
+    .container-2{
+        width: 100%;
+        height: 65vh;
+        padding-top: 90px;
+        padding-bottom: 90px;
+        display: flex;
+        align-items: center;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .contain-2 h1{
+        width: 75%;
+        font-size: 25px;
+        color: #fff;
+    }
+    .contain-2 button{
+        width: 35%;
+        font-size: 10px;
+        display: flex;
+    }
+    .testimonial{
+        width: 95%;
+        height: 45vh;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        column-gap: 30px;
+    }
+    .quotes-img{
+        position: absolute;
+        left: 4rem;
+        top: -1.5rem;
+        z-index: 1;
+    }
+    .inside{
+        padding: 20px;
+    }
+    .box1{
+        width: 35%;
+        height: 40vh;
+        border-radius: 10px;
+        z-index: 6;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box1 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .box2{
+        width: 35%;
+        height: 40vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box2 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .box3{
+        width: 35%;
+        height: 40vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box3 p{
+        font-size: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .profile{
+        width: 95%;
+        height: 10vh;
+        padding-top: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .profile img{
+        width: 20%;
+        height: 35px;
+        padding-right: 10px;
+        border-radius: 45%;
+    }
+    .profile h3{
+        font-size: 16px;
+    }
+    .profile p{
+        font-size: 10px;
+    }
+    .subcribe-section{
+        width: 100%;
+        height: 30vh;
+        padding-bottom: 10px;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .subcribe-section{
+        width: 100%;
+        height: 30vh;
+        padding-bottom: 10px;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .subcribe{
+        width: 60%;
+        height: 29vh;
+        margin: auto;
+        background-color: hsl(217, 28%, 15%);
+        position: relative;
+        left: -1rem;
+        top: 4rem;
+        z-index: 3;
+    }
+    .subcribe h1{
+        font-size: 29px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-top: 12px;
+    }
+    .subcribe p{
+        width: 90%;
+        margin: auto;
+        font-size: 16px;
+        text-align: center;
+        color: rgb(230, 230, 230);
+        padding-top: 10px;
+    }
+    .subcribe span{
+        width: 80%;
+        margin: auto;
+        padding-top: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .subcribe span input{
+        width: 60%;
+        height: 30px;
+        padding-left: 15px;
+        border: 0;
+        border-radius: 20px;
+    }
+    .subcribe span button{
+        width: 30%;
+        height: 30px;
+        padding-left: 5px;
+        border: 0;
+        font-size: 10px;
+        border-radius: 20px;
+        color: #fff;
+        background-color: hsl(177, 55%, 51%);
+    }
+    .fotter{
+        width: 100%;
+        height: 50vh;
+        display: flex;
+        padding-top: 29px;
+        justify-content: space-around;
+        align-items: center;
+        background-color: hsl(216, 53%, 9%);
+        position: absolute;
+        z-index: 1;
+    }
+    .fotter3 ul li a{
+        font-size: 15px;
     }
 }
