--- a/style.css
+++ b/style.css
@@ -890,9 +890,16 @@ ul li a{
 
 @media only screen and (max-width: 425px) {
     .logo img{
-        width: 100%;
+        width: 110px;
         height: 30px;
-        padding-top: 15px;
+        padding-top: 12px;
+    }
+    ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 30px;
+        column-gap: 20px;
     }
     .carry{
         width: 100vw;
@@ -1017,6 +1024,12 @@ ul li a{
         background-color: hsl(218, 28%, 13%);
         position: relative;
     }
+    .quotes-img{
+        position: absolute;
+        left: 5rem;
+        top: -2rem;
+        z-index: 1;
+    }
     .testimonial{
         width: 90%;
         height: auto;
@@ -1042,5 +1055,123 @@ ul li a{
     .box1 p{
         font-size: 18px;
         color: rgb(192, 187, 187);
+    }
+    .box2{
+        width: 80%;
+        height: 35vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box2 p{
+        font-size: 18px;
+        color: rgb(192, 187, 187);
+    }
+    .box3{
+        width: 80%;
+        height: 35vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box3 p{
+        font-size: 18px;
+        color: rgb(192, 187, 187);
+    }
+    .subcribe-section{
+        width: 100%;
+        height: 30vh;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .subcribe{
+        width: 90%;
+        height: 27vh;
+        margin: auto;
+        margin-left: 40px;
+        background-color: hsl(217, 28%, 15%);
+        position: relative;
+        left: -1rem;
+        top: .5rem;
+        z-index: 3;
+    }
+    .subcribe h1{
+        font-size: 25px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-top: 7px;
+    }
+    .subcribe p{
+        width: 95%;
+        margin: auto;
+        font-size: 16px;
+        text-align: center;
+        color: rgb(230, 230, 230);
+        padding-top: 5px;
+    }
+    .subcribe span{
+        width: 95%;
+        margin: auto;
+        padding-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .subcribe span input{
+        width: 60%;
+        height: 40px;
+        padding-left: 15px;
+        border: 0;
+        border-radius: 20px;
+    }
+    .subcribe span button{
+        width: 30%;
+        height: 40px;
+        border: 0;
+        font-size: 10px;
+        border-radius: 20px;
+        color: #fff;
+        background-color: hsl(177, 55%, 51%);
+    }
+    .fotter{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: hsl(216, 53%, 9%);
+        position: absolute;
+        z-index: 1;
+    }
+    .fotter1{
+        width: 90%;
+    }
+    .fotter1 div{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        column-gap: 20px;
+    }
+    .fotter2{
+        width: 90%;
+    }
+    .fotter2 div{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        column-gap: 20px;
+    }
+    .fotter3{
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .fotter3 ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 10px;
     }
 }
