--- a/style.css
+++ b/style.css
@@ -1175,6 +1175,9 @@ ul li a{
         row-gap: 10px;
     }
 }
+
+
+
 @media only screen and (max-width: 375px) {
     .logo img{
         width: 90px;
@@ -1369,6 +1372,313 @@ ul li a{
     .box3{
         width: 80%;
         height: 40vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box3 p{
+        font-size: 18px;
+        color: rgb(192, 187, 187);
+    }
+    .subcribe-section{
+        width: 100%;
+        height: 40vh;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .subcribe{
+        width: 95%;
+        height: 35vh;
+        margin-left: 20px;
+        background-color: hsl(217, 28%, 15%);
+        position: relative;
+        left: -.6rem;
+        top: .5rem;
+        z-index: 3;
+    }
+    .subcribe h1{
+        font-size: 20px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-top: 7px;
+    }
+    .subcribe p{
+        width: 95%;
+        margin: auto;
+        font-size: 15px;
+        text-align: center;
+        color: rgb(230, 230, 230);
+        padding-top: 5px;
+    }
+    .subcribe span{
+        width: 95%;
+        margin: auto;
+        padding-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .subcribe span input{
+        width: 55%;
+        height: 40px;
+        padding-left: 15px;
+        border: 0;
+        border-radius: 20px;
+    }
+    .subcribe span button{
+        width: 35%;
+        height: 40px;
+        border: 0;
+        font-size: 10px;
+        border-radius: 20px;
+        color: #fff;
+        background-color: hsl(177, 55%, 51%);
+    }
+    .fotter{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: hsl(216, 53%, 9%);
+        position: absolute;
+        z-index: 1;
+    }
+    .fotter1{
+        width: 90%;
+    }
+    .fotter1 div{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        column-gap: 20px;
+    }
+    .fotter2{
+        width: 90%;
+    }
+    .fotter2 div{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        column-gap: 20px;
+    }
+    .fotter3{
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .fotter3 ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 320px) {
+    .logo img{
+        width: 60px;
+        height: 30px;
+        padding-top: 12px;
+    }
+    ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 30px;
+        column-gap: 15px;
+    }
+    ul li a{
+        font-size: 17px;
+        color: #fff;
+        text-decoration: none;
+    }
+    .carry{
+        width: 100vw;
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 6;
+    }
+    .underNav img{
+        width: 65%;
+        margin-top: 20px;
+    }
+    .underNav .carry h1{
+        width: 90vw;
+        font-size: 25px;
+        text-align: center;
+        margin-top: 10px;
+        color: #fff;
+    }
+    .articles{
+        width: 100%;
+        height: auto;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .articles .top{
+        width: 100%;
+        height: auto;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .articles .top .left{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .articles .top .right{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+    }
+    .articles .bottom{
+        width: 100%;
+        height: auto;
+        margin: auto;
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .articles .bottom .left{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 40px;
+        align-items: center;
+    }
+    .articles .bottom .right{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+    }
+    .container-2{
+        width: 100%;
+        height: auto;
+        padding-top: 90px;
+        padding-bottom: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: hsl(218, 28%, 13%);
+    }
+    .contain-1{
+        width: 100%;
+        height: 60vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .contain-1 img{
+        width: 90%;
+        height: 50vh;
+    }
+    .contain-2{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .contain-2 h1{
+        width: 95%;
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+    }
+    .contain-2 p{
+        width: 90%;
+        font-size: 20px;
+        margin-top: 15px;
+        color: rgb(192, 187, 187);
+    }
+    .contain-2 button{
+        width: 50%;
+        height: 30px;
+        margin-top: 20px;
+        margin-left: -8rem;
+        border: 0;
+        display: flex;
+        column-gap: 5px;
+        font-size: 15px;
+        border-bottom: 2px solid hsl(177, 60%, 50%);
+        color: hsl(177, 60%, 50%);
+        background-color: transparent;
+    }
+    .testimonia-container{
+        width: 100%;
+        height: auto;
+        padding-bottom: 10px;
+        background-color: hsl(218, 28%, 13%);
+        position: relative;
+    }
+    .quotes-img{
+        position: absolute;
+        left: 5rem;
+        top: -2rem;
+        z-index: 1;
+    }
+    .testimonial{
+        width: 90%;
+        height: auto;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+    }
+    .box1{
+        width: 80%;
+        height: 43vh;
+        border-radius: 10px;
+        z-index: 6;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .profile img{
+        width: 20%;
+        height: 40px;
+        padding-right: 10px;
+        border-radius: 50%;
+    }
+    .profile .name p{
+        font-size: 12px;
+    }
+    .box1 p{
+        font-size: 18px;
+        color: rgb(192, 187, 187);
+    }
+    .box2{
+        width: 80%;
+        height: 43vh;
+        border-radius: 10px;
+        background-color: hsl(217, 28%, 15%);
+    }
+    .box2 p{
+        font-size: 18px;
+        color: rgb(192, 187, 187);
+    }
+    .box3{
+        width: 80%;
+        height: 43vh;
         border-radius: 10px;
         background-color: hsl(217, 28%, 15%);
     }
